sdk/tests/snapshots/reader__reader_xca_jpg.snap
---
source: sdk/tests/reader.rs
expression: unescape_json(&reader.json())?
---
{
  "active_manifest": "[MANIFEST_URN]",
  "manifests": {
    "[MANIFEST_URN]": {
      "assertions": [
        {
          "data": {
            "@context": "http://schema.org/",
            "@type": "CreativeWork",
            "author": [
              {
                "@type": "Person",
                "name": "John Doe"
              }
            ]
          },
          "kind": "Json",
          "label": "stds.schema-org.CreativeWork"
        },
        {
          "data": {
            "actions": [
              {
                "action": "c2pa.opened",
                "instanceId": "xmp.iid:813ee422-9736-4cdc-9be6-4e35ed8e41cb",
                "parameters": {
                  "ingredient": {
                    "hash": "5dNlxTKe4afGAicpJa1hF1R3mBZKE+Bl0xmh0McXuO4=",
                    "url": "[JUMBF_URI]"
                  }
                }
              },
              {
                "action": "c2pa.color_adjustments",
                "parameters": {
                  "name": "brightnesscontrast"
                }
              }
            ]
          },
          "label": "c2pa.actions"
        }
      ],
      "claim_generator": "make_test_images/0.33.1 c2pa-rs/[VERSION]",
      "claim_generator_info": [
        {
          "name": "make_test_images",
          "version": "[VERSION]"
        },
        {
          "name": "c2pa-rs",
          "version": "[VERSION]"
        }
      ],
      "format": "image/jpeg",
      "ingredients": [
        {
          "document_id": "xmp.did:813ee422-9736-4cdc-9be6-4e35ed8e41cb",
          "format": "image/jpeg",
          "instance_id": "xmp.iid:813ee422-9736-4cdc-9be6-4e35ed8e41cb",
          "relationship": "parentOf",
          "thumbnail": {
            "format": "image/jpeg",
            "identifier": "[JUMBF_URI]"
          },
          "title": "A.jpg"
        }
      ],
      "instance_id": [XMP_ID]",
      "label": "[MANIFEST_URN]",
      "signature_info": {
        "alg": "Ps256",
        "cert_serial_number": "720724073027128164015125666832722375746636448153",
        "issuer": "C2PA Test Signing Cert",
        "time": "[TIMESTAMP1]"
      },
      "thumbnail": {
        "format": "image/jpeg",
        "identifier": "[JUMBF_URI]"
      },
      "title": "CA.jpg"
    }
  },
  "validation_status": [
    {
      "code": "assertion.dataHash.mismatch",
      "explanation": "asset hash error, name: jumbf manifest, error: hash verification( Hashes do not match )",
      "url": "[JUMBF_URI]"
    }
  ]
}
